<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Build Parent -->
  <parent>
    <groupId>tools.vitruv</groupId>
    <artifactId>parent</artifactId>
    <version>3.0.6</version>
  </parent>

  <!-- Project Information -->
  <artifactId>tools.vitruv.methodologisttemplate</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Methodologist Template</name>
  <description />

  <!-- Modules -->
  <modules>
    <module>viewtype</module>
    <module>vsum</module>
    <module>model</module>
    <module>consistency</module>
  </modules>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.openntf.maven</groupId>
        <artifactId>p2-layout-resolver</artifactId>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <!-- Vitruvius dependencies -->
      <dependency>
        <groupId>tools.vitruv</groupId>
        <artifactId>tools.vitruv.change.atomic</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>tools.vitruv</groupId>
        <artifactId>tools.vitruv.change.composite</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>tools.vitruv</groupId>
        <artifactId>tools.vitruv.change.interaction</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>tools.vitruv</groupId>
        <artifactId>tools.vitruv.change.propagation</artifactId>
        <!--TODO 4 development-->
        <version>3.2.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>tools.vitruv</groupId>
        <artifactId>tools.vitruv.change.testutils.integration</artifactId>
        <version>3.1.0</version>
      </dependency>
<!--      <dependency>-->
<!--        <groupId>tools.vitruv</groupId>-->
<!--        <artifactId>tools.vitruv.dsls.tgg.runtime</artifactId>-->
<!--        <version>3.2.0-SNAPSHOT</version>-->
<!--      </dependency>-->
      <dependency>
        <groupId>tools.vitruv</groupId>
        <artifactId>tools.vitruv.tgg.emoflon-integration</artifactId>
        <version>0.1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>tools.vitruv</groupId>
        <artifactId>tools.vitruv.dsls.reactions.runtime</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>tools.vitruv</groupId>
        <artifactId>tools.vitruv.framework.views</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>tools.vitruv</groupId>
        <artifactId>tools.vitruv.framework.vsum</artifactId>
        <version>3.1.0</version>
      </dependency>

      <!-- external dependencies-->
      <dependency>
        <groupId>org.eclipse.emf</groupId>
        <artifactId>org.eclipse.emf.common</artifactId>
        <version>2.40.0</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.emf</groupId>
        <artifactId>org.eclipse.emf.ecore</artifactId>
        <version>2.38.0</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.10.1</version>
      </dependency>
      <dependency>
        <groupId>log4j</groupId>
        <artifactId>log4j</artifactId>
        <version>1.2.17</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>